--- a/page1.html
+++ b/page1.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Page 1</h1>
+    <h2>Page nation two</h2>
   </body>
 </html>
